# graduation_proj_cursor

./: .gitignore  CodeOverview.md  PROJECT_STRUCTURE.md  README.md  _audit_baseline.py  manual.md  pyproject.toml  requirements.txt  test.py  任务报告书.txt
configs/: default.yaml  default_bandit_only_run.yaml  default_run.yaml  dpo.yaml
data/: dpo_pairs.json  eval_expanded.json  train_expanded.json
dataset/: README.md  __init__.py  adversarial.py  dpo_train.jsonl  generate_expanded_dataset.py  generate_sql_security_dataset.py  research_schema.py  sft_train.jsonl  sft_val.jsonl  sql_security_dataset.json  synthetic_sql.py  template_bank.py
detection/: __init__.py  bandit_wrapper.py  detector.py  rule_based.py  sql_injection_detector.py  taint_tracker.py
evaluation/: __init__.py  evaluate.py  evaluator.py  experiment_log.py  metrics.py  prompt_loader.py
logs/: README.md  changelog_2026-04-14_docs_sync.md  changelog_2026-04-14_entrypoint_cleanup.md  changelog_2026-04-17_dataset_cleanup_safe_prune.md  changelog_2026-04-17_difficulty_augmentation.md  changelog_2026-04-17_diversity_refactor.md  changelog_2026-04-17_eval_generalization_300.md  changelog_2026-04-17_eval_generalization_600_augmented.md  changelog_2026-04-17_eval_generalization_660_expanded_unique.md  changelog_2026-04-17_eval_merge_into_main.md  changelog_2026-04-17_final_sanity_check.md  changelog_2026-04-17_project_cleanup_entrypoints.md  changelog_2026-04-17_semantic_alignment_cleanup.md  changelog_2026-04-20_eval_label_enforcement.md  changelog_2026-04-20_id_string_enforcement.md  (+58 more)
models/: README.md
(+81 files in other folders)
